package com.theinfectedhour.entities.boss.phases;

import com.theinfectedhour.entities.boss.VirusHeart;

/** Boss phase 3: the final destruction sequence of the VirusHeart core. */
public class CoreDestructionPhase implements BossPhase {

    @Override
    public void onEnter(VirusHeart boss) {
        // TODO: implement
    }

    @Override
    public void update(float deltaTime) {
        // TODO: implement
    }

    @Override
    public void onExit() {
        // TODO: implement
    }
}
