package com.theinfectedhour.entities.boss.phases;

import com.theinfectedhour.entities.boss.VirusHeart;

/** Boss phase 2: the core is exposed and vulnerable for a limited window. */
public class ExposurePhase implements BossPhase {

    @Override
    public void onEnter(VirusHeart boss) {
        // TODO: implement
    }

    @Override
    public void update(float deltaTime) {
        // TODO: implement
    }

    @Override
    public void onExit() {
        // TODO: implement
    }
}
