package com.theinfectedhour.entities.boss.phases;

import com.theinfectedhour.entities.boss.VirusHeart;

/** Boss phase 1: the VirusHeart is shielded and must be exposed before it can be damaged. */
public class ShieldPhase implements BossPhase {

    @Override
    public void onEnter(VirusHeart boss) {
        // TODO: implement
    }

    @Override
    public void update(float deltaTime) {
        // TODO: implement
    }

    @Override
    public void onExit() {
        // TODO: implement
    }
}
