package com.theinfectedhour.entities.enemy.ai;

/** EnemyAI strategy: holds a position (e.g. around objectives) and engages only when approached. */
public class GuardBehavior implements EnemyAI {

    @Override
    public Action decideAction(WorldContext context) {
        // TODO: implement
        return null;
    }
}
