package com.theinfectedhour.entities.enemy.ai;

/** EnemyAI strategy: rushes players aggressively in groups. */
public class SwarmBehavior implements EnemyAI {

    @Override
    public Action decideAction(WorldContext context) {
        // TODO: implement
        return null;
    }
}
