package com.theinfectedhour.entities.player;

/** The two playable roles in the co-op pair. */
public enum PlayerRole {
    FIELD_MEDIC,
    LOCAL_SCOUT
}
